--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "lint:base": "eslint --config ./.config/.eslintrc.js ",
     "lint": "npm run lint:base -- .",
-    "local": "npm run prepare && node -r dotenv/config ./dist/index.js",
-    "prepare": "ncc build src/index.ts && husky install",
+    "local": "npm run build && node -r dotenv/config ./dist/index.js",
+    "build": "ncc build src/index.ts && husky install",
     "style:base": "prettier --config ./.config/.prettierrc.yml --ignore-path ./.config/.prettierignore --write ",
     "style": "npm run style:base -- .",
     "test": "jest -c ./.config/jest.config.js"
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
-    "@commitlint/cli": "^16.2.3",
+    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^16.2.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
@@ -45,7 +45,7 @@
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "semantic-release": "19.0.3",
+    "semantic-release": "^24.1.0",
     "ts-jest": "^28.0.7",
     "ts-node": "9.0.0",
     "typescript": "^4.7.4",
